# privacy-protocol-toolkit-p2p

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.py
demo_reports/: report-20260128-162242.txt  report-20260128-162410.txt
docs/: DEMO_CONTRACT.md  DOCUMENTATION.md  KNOWN_ISSUES.md  PHASE_2B_OVERVIEW.md  PHASE_2C_MIGRATION_SPEC.md  PY_LIBP2P_STATUS.md  REAL_NETWORK_GUIDE.md
docs/archive/: CRYPTO_SPEC_PHASE2B.md  PHASE_2A_OVERVIEW.md  PHASE_2A_PROGRESS.md  PHASE_2B_OVERVIEW.md  PHASE_2B_PROGRESS.md  README.md  phase2_learning.md
examples/: basic_analysis.py  demo_scenarios.py  multi_node_scenario.py
libp2p_privacy_poc/: cli.py  metadata_collector.py  privacy_analyzer.py  report_generator.py  zk_integration.py
libp2p_privacy_poc/network/: __init__.py
libp2p_privacy_poc/privacy_protocol/: __init__.py  config.py  exceptions.py  factory.py  feature_flags.py  merkle.py  security.py  statements.py  types.py
libp2p_privacy_poc/tests/: test_privacyzk_cli.py  test_real_zk_integration.py
privacy_circuits/: Cargo.toml
privacy_circuits/continuity_py/: Cargo.toml  pyproject.toml
privacy_circuits/continuity_py/src/: lib.rs
privacy_circuits/membership_py/: Cargo.toml  pyproject.toml
privacy_circuits/membership_py/src/: lib.rs
privacy_circuits/unlinkability/: Cargo.toml
privacy_circuits/unlinkability/src/: circuit.rs  lib.rs  schema.rs
privacy_circuits/unlinkability_py/: Cargo.toml  pyproject.toml
privacy_circuits/unlinkability_py/src/: lib.rs
scripts/: demo_local.sh  validate_phase2b_vectors.py
tests/: test_basic_integration.py  test_cli_real.py  test_edge_cases.py  test_multi_peer_real.py  test_phase1_5_complete.py  test_phase2b_vectors_integration.py  test_real_connection.py  test_report_data_source.py
(+74 files in other folders)
