[package]
name = "unlinkability"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = { version = "0.4", features = ["getrandom"] }
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-r1cs-std = "0.4"
ark-sponge = { version = ">=0.4.0-alpha, <0.5", features = ["r1cs"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1"
membership = { path = "../membership" }
